update pubmed-pairs again

--- a/static/pubmed-pairs/index.html
+++ b/static/pubmed-pairs/index.html
@@ -50,10 +50,11 @@
 
 <style>
 .hits {
-     cursor:pointer;
-     color:blue;
-     text-decoration:underline;
+  cursor: pointer;
+  color: blue;
+  /*text-decoration: underline;*/
 }
+.dots { color: blue; cursor: pointer; }
 .more {display: none;}
 .pmid {user-select: all;}
 </style>
