--- a/static/pubmed-pairs/index.html
+++ b/static/pubmed-pairs/index.html
@@ -3,28 +3,35 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>pubmed-pairs</title>
+    <title>&#x270C; pubmed-pairs</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
   </head>
 
   <body>
+
     <section class="mw8 center sans-serif">
 
-      <div class="container-fluid text-center">
-        <h1 class="mt-5">pubmed-pairs</h1>
+      <div class="container-fluid text-center mt-5">
+        <h1 class="f1">&#x270C; pubmed-pairs</h1>
+      </div>
+
+      <div class="pv2">
+        <p>This page uses Javascript to query the <a class="link" href="https://www.ncbi.nlm.nih.gov/books/NBK25499/">NCBI Entrez PubMed API</a> with pairs of search terms. 
+        </p>
+        <p>View the source code at <a class="link" href="https://github.com/slowkow/pubmed-pairs">github.com/slowkow/pubmed-pairs</a></p>
       </div>
 
       <div class="pv2" id="search">
 
         <div>
-          <label class="db fw6 lh-copy f6" for="first">First search terms:</label>
+          <label class="db fw6 lh-copy f6" for="first">First set of search terms:</label>
           <textarea class="pa2 ba w-100" id="first" name="first" rows="1" cols="50">virus, bacteria</textarea>
         </div>
 
         <div>
-          <label class="db fw6 lh-copy f6" for="second">Second search terms:</label>
+          <label class="db fw6 lh-copy f6" for="second">Second set of search terms:</label>
           <textarea class="pa2 ba w-100" id="second" name="second" rows="1" cols="50">HLA-DQA1, HLA-DQB1, IL6, PDCD1, TIMP4</textarea>
         </div>
 
@@ -46,19 +53,30 @@
       <div class="pv2" id="papers">
       </div>
 
+
+    <div class="container-fluid text-center mt-5">
+    </div>
+
     </section>
 
-<style>
-.hits {
-  cursor: pointer;
-  color: blue;
-  /*text-decoration: underline;*/
-}
-.dots { color: blue; cursor: pointer; }
-.more {display: none;}
-.pmid {user-select: all;}
-</style>
   </body>
+
+  <style>
+  /* unvisited link */
+  a:link {
+      color: #00449e;
+  }
+  /* visited link */
+  a:visited {
+      /*color: rgb(85, 26, 139);*/
+      color: rgb(127 11 193);
+  }
+  .hits { cursor: pointer; color: #00449e; }
+  .dots { cursor: pointer; color: #00449e; }
+  .more { display: none; }
+  .pmid { user-select: all; }
+  .searchterm { background-color: rgb(255 216 0 / 33%); }
+  </style>
 
 	<script type="module" src="main.js"></script>
 
