--- a/slides/ggrepel/index.html
+++ b/slides/ggrepel/index.html
@@ -39,7 +39,7 @@ class: title-slide-custom, center
 
 July 2018
 
-Kamil Slowikowski &lt;br&gt; [@slowkow](https://twitter.com/slowkow)
+Kamil Slowikowski &lt;br&gt; [@slowkow.com](https://bsky.app/profile/slowkow.com)
 ]
 
 ???
@@ -294,14 +294,12 @@ Thanks to [Stephen Turner] for the example data.
 # &amp;#x1F92D; Don't label too many points!
 
 .large[
-Or else you will end up with [@accidental__aRt]
+Or else you will end up with accidental art
 ]
 
 &lt;div class="center"&gt;
 &lt;img src="index_files/accidental-art-1.png" alt="" style="width: 66%;"&gt;
 &lt;/div&gt;
-
-[@accidental__aRt]: https://twitter.com/accidental__aRt
 
 ???
 
@@ -494,8 +492,8 @@ These slides are available at:
 ### [slowkow.com/ggrepel](https://slowkow.com/ggrepel)
 
 &lt;br&gt;
-&lt;img src="index_files/twitter.svg" width="32px"&gt;&lt;/img&gt;
-Kamil Slowikowski &lt;br&gt; [@slowkow](https://twitter.com/slowkow)
+&lt;img src="index_files/bluesky.svg" width="32px"&gt;&lt;/img&gt;
+Kamil Slowikowski &lt;br&gt; [@slowkow.com](https://bsky.app/profile/slowkow.com)
 ]
 
 &lt;br&gt;&lt;br&gt;
@@ -509,7 +507,7 @@ Made with &amp;#x2694; [xaringan]
 - These slides are available online, so you can follow the links to all
   the resources I highlighted.
 
-- Feel free to follow me and ask questions on twitter!
+- Feel free to follow me and ask questions on Bluesky!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="libs/remark-latest.min.js"></script>
