--- a/static/ggrepel/index.html
+++ b/static/ggrepel/index.html
@@ -39,7 +39,7 @@ class: title-slide-custom, center
 
 July 2018
 
-Kamil Slowikowski &lt;br&gt; [@slowkow](https://twitter.com/slowkow)
+Kamil Slowikowski &lt;br&gt; {{< bluesky >}}
 ]
 
 ???
