--- a/static/bootswatch/index.html
+++ b/static/bootswatch/index.html
@@ -26,38 +26,38 @@
 
 const elem = document.getElementById('panzoom-element')
 
-var pngs = ['Screenshot 2025-04-17 at 14-16-49 Bootswatch Default.png',
-'Screenshot 2025-04-17 at 14-17-01 Bootswatch Brite.png',
-'Screenshot 2025-04-17 at 14-17-12 Bootswatch Cyborg.png',
-'Screenshot 2025-04-17 at 14-17-22 Bootswatch Journal.png',
-'Screenshot 2025-04-17 at 14-17-35 Bootswatch Lux.png',
-'Screenshot 2025-04-17 at 14-17-55 Bootswatch Morph.png',
-'Screenshot 2025-04-17 at 14-18-02 Bootswatch Sandstone.png',
-'Screenshot 2025-04-17 at 14-18-14 Bootswatch Slate.png',
-'Screenshot 2025-04-17 at 14-18-22 Bootswatch Superhero.png',
-'Screenshot 2025-04-17 at 14-18-33 Bootswatch Yeti.png',
-'Screenshot 2025-04-17 at 14-18-42 Bootswatch Cerulean.png',
-'Screenshot 2025-04-17 at 14-18-52 Bootswatch Darkly.png',
-'Screenshot 2025-04-17 at 14-19-05 Bootswatch Litera.png',
-'Screenshot 2025-04-17 at 14-19-15 Bootswatch Materia.png',
-'Screenshot 2025-04-17 at 14-19-24 Bootswatch Pulse.png',
-'Screenshot 2025-04-17 at 14-19-32 Bootswatch Simplex.png',
-'Screenshot 2025-04-17 at 14-19-40 Bootswatch Solar.png',
-'Screenshot 2025-04-17 at 14-19-49 Bootswatch United.png',
-'Screenshot 2025-04-17 at 14-20-03 Bootswatch Zephyr.png',
-'Screenshot 2025-04-17 at 14-20-15 Bootswatch Cosmo.png',
-'Screenshot 2025-04-17 at 14-20-24 Bootswatch Flatly.png',
-'Screenshot 2025-04-17 at 14-20-31 Bootswatch Lumen.png',
-'Screenshot 2025-04-17 at 14-20-44 Bootswatch Minty.png',
-'Screenshot 2025-04-17 at 14-20-58 Bootswatch Quartz.png',
-'Screenshot 2025-04-17 at 14-21-26 Bootswatch Sketchy.png',
-'Screenshot 2025-04-17 at 14-21-41 Bootswatch Spacelab.png',
-'Screenshot 2025-04-17 at 14-21-54 Bootswatch Vapor.png']
+var images = ['Screenshot 2025-04-17 at 14-16-49 Bootswatch Default.avif',
+'Screenshot 2025-04-17 at 14-17-01 Bootswatch Brite.avif',
+'Screenshot 2025-04-17 at 14-17-12 Bootswatch Cyborg.avif',
+'Screenshot 2025-04-17 at 14-17-22 Bootswatch Journal.avif',
+'Screenshot 2025-04-17 at 14-17-35 Bootswatch Lux.avif',
+'Screenshot 2025-04-17 at 14-17-55 Bootswatch Morph.avif',
+'Screenshot 2025-04-17 at 14-18-02 Bootswatch Sandstone.avif',
+'Screenshot 2025-04-17 at 14-18-14 Bootswatch Slate.avif',
+'Screenshot 2025-04-17 at 14-18-22 Bootswatch Superhero.avif',
+'Screenshot 2025-04-17 at 14-18-33 Bootswatch Yeti.avif',
+'Screenshot 2025-04-17 at 14-18-42 Bootswatch Cerulean.avif',
+'Screenshot 2025-04-17 at 14-18-52 Bootswatch Darkly.avif',
+'Screenshot 2025-04-17 at 14-19-05 Bootswatch Litera.avif',
+'Screenshot 2025-04-17 at 14-19-15 Bootswatch Materia.avif',
+'Screenshot 2025-04-17 at 14-19-24 Bootswatch Pulse.avif',
+'Screenshot 2025-04-17 at 14-19-32 Bootswatch Simplex.avif',
+'Screenshot 2025-04-17 at 14-19-40 Bootswatch Solar.avif',
+'Screenshot 2025-04-17 at 14-19-49 Bootswatch United.avif',
+'Screenshot 2025-04-17 at 14-20-03 Bootswatch Zephyr.avif',
+'Screenshot 2025-04-17 at 14-20-15 Bootswatch Cosmo.avif',
+'Screenshot 2025-04-17 at 14-20-24 Bootswatch Flatly.avif',
+'Screenshot 2025-04-17 at 14-20-31 Bootswatch Lumen.avif',
+'Screenshot 2025-04-17 at 14-20-44 Bootswatch Minty.avif',
+'Screenshot 2025-04-17 at 14-20-58 Bootswatch Quartz.avif',
+'Screenshot 2025-04-17 at 14-21-26 Bootswatch Sketchy.avif',
+'Screenshot 2025-04-17 at 14-21-41 Bootswatch Spacelab.avif',
+'Screenshot 2025-04-17 at 14-21-54 Bootswatch Vapor.avif']
 
 var htmlString = ''
-for (const png of pngs) {
-	const name = png.split(' ')[5].split('.')[0]
-	htmlString += `<figure class="item"><h1>${name}</h1><img src="${png}"></img></figure>`
+for (const image of images) {
+	const name = image.split(' ')[5].split('.')[0]
+	htmlString += `<figure class="item"><h1>${name}</h1><img src="${image}"></img></figure>`
 }
 elem.insertAdjacentHTML('beforeend', htmlString)
 
